# karen

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
karen/: __init__.py  __main__.py  api.py  app.py  config.py  globals.py  models.py  storage.py  tracking.py  ui_strings.py  util.py  watcher.py
karen/core/: bot.py  middleware.py  storage.py
