[tool.poetry]
name = "karen"
version = "0.2.0"
description = "vk.com bot preventing people from stealthily editing or deleting messages"
authors = ["Pavel Andreyev <snowwontmelt@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/snowwm/karen"
keywords = ["vk", "vk-bot"]

[tool.poetry.dependencies]
python = "^3.7"
vk_api = "^11.4"
wrapt = "^1.11"
importlib_metadata = "^0.18.0"

[tool.poetry.dev-dependencies]
poetry = "^1.0.0a0"
isort = "^4.3"

[tool.poetry.scripts]
karen = "karen.app:main" # TODO: it doesn't import __main__ when given a package, bug?

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
