[project]
description = "vk.com bot that prevents people from stealthily editing or deleting messages"
authors = [
    {name = "Pavel Andreyev", email = "snowwontmelt@gmail.com"},
]
dependencies = ["vk-api~=11.9", "pymongo[srv,tls]~=3.11"]
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/snowwm/karen"

[tool.pdm.scripts]
_.env_file = ".env"
start = "python -m karen"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
